--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    height: 500vh;
+    height: fit-content;
     width: 100vw;
     max-width: 100%;
     background-color: #eee;
@@ -16,7 +16,7 @@ body {
 }
 
 ::-webkit-scrollbar{
-    width: 20px;
+    width: 10px;
 }
 
 ::-webkit-scrollbar-track{
@@ -160,19 +160,209 @@ to demonstrate that the flip itself goes out of the box on hover (remove perspec
 
 /* Style the back side */
 .flip-card-back {
-    background-color: #25242a;
-    color: white;
+    background-image: linear-gradient(45deg, rgba(161, 165, 162, .219608), transparent);
+    color: #212529;
     transform: rotateY(180deg);
     border-radius: 0.375rem;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: center;
-    padding: 5px;
+    padding: 10%;
 }
 
+.card-title {
+    height: 25%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Title of the movie/serie at the back of my card */
 #title {
     font-size: 1.5rem;
     color: #8685EF;
+    font-weight: 400;
+}
+
+/* Movie description at the back of my card */
+#overview {
+    font-size: 0.9rem;
+}
+
+/* Container for my category section */
+.categories-section-container {
+    height: 50vh;
+    width: 100%;
+}
+
+/* Categories content where my categories will be displayed within cards */
+.categories-content {
+    height: 80%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(10, 10%);
+    grid-template-rows: repeat(2, 50%);
+    grid-auto-flow: column;
+    grid-auto-columns: 10%;
+}
+
+/* Cell of my categories-content container */
+.category-item {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* the card itself */
+.card {
+    height: 90%;
+    width: 90%;
+    background-image: linear-gradient(45deg, rgba(161, 165, 162, .219608), transparent);
+    border-radius: 15px;
+    border: 1px solid #000;
+    box-shadow: 3px 3px 3px gray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+
+/* When the card is on hover */
+.card:hover {
+    background-image: linear-gradient(to right, #25242a, #3d3a56, #555286, #6e6bb9, #8685ef);
+    height: 93%;
+    width: 93%;
+}
+
+
+
+/* My paragraph when i hover my card */
+.card:hover p{
+    color: #ddd;
+    transition: all 0.2s ease-in-out;
+}
+
+/* title of my category */
+.card > p {
+    font-size: 1.4rem;
     font-weight: 600;
+    color: #212529;
+    text-shadow: 2px 2px 2px gray;
+}
+
+/* Container for my popular people section */
+.popular-people-container {
+    height: 60vh;
+    width: 100vw;
+    max-width: 100%;
+    max-height: 100%;
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
+/* my popular people section's grid */
+.popular-people-content {
+    height: 80%;
+    width: 100vw;
+    display: grid;
+    grid-template-columns: repeat(5, 15%);
+    gap: 1.5%;
+    grid-auto-flow: column;
+    grid-auto-columns: 15%;
+}
+
+/* One of the cell of popular people grid */
+.people-card {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Card inside my cell */
+.people-card-content {
+    height: 85%;
+    width: 85%;
+    background-color: #212529;
+    border-radius: 0.375rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+
+/* Container for my top div which represents the img on my card for famous people */
+.people-card-image {
+    height: 90%;
+    width: 100%;
+}
+/* Img inside img container */
+.people-card-image > img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 0.375rem;
+}
+
+/* Div container for the name of my actors */
+.people-card-name {
+    height: 10%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Paragraph with name of popular people */
+.people-card-name > p {
+    font-size: 1rem;
+    color: #ddd;
+}
+
+.go-to-top {
+    height: 20vh;
+    width: 100%;
+    background:linear-gradient(45deg, rgba(161, 165, 162, .219608), transparent);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.go-top-btn {
+    height: 50%;
+    width: 70%;
+    border-radius: 0.375rem;
+    cursor: pointer;
+    background-color: #fff;
+    color: #25242a;
+    font-size: 1.5rem;
+    transition: all 0.3s ease-in-out;
+}
+
+.go-top-btn:hover {
+    background-color: #25242a;
+    color: #fff;
+}
+
+.go-top-btn:hover i{
+    animation: top 1.2s linear infinite ;
+}
+
+@keyframes top{
+    50% {
+        transform: translateY(30%);
+    }
+    
+    100% {
+        trasnform: translateY(-30%);
+    }
 }
