--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -60,7 +61,7 @@ body {
     font-size: 4rem;
     color: #8685EF;
     cursor: pointer;
-    transition: all 0.5s ease-in-out;
+    transition: all 0.25s ease-in-out;
     text-shadow: 1px 1px 1px #ddd;
 }
 #navbar-title > i:hover {
@@ -134,7 +135,7 @@ to demonstrate that the flip itself goes out of the box on hover (remove perspec
     width: 100%;
     height: 100%;
     text-align: center;
-    transition: transform 0.8s;
+    transition: transform 0.85s;
     transform-style: preserve-3d;
 }
 
@@ -166,7 +167,7 @@ to demonstrate that the flip itself goes out of the box on hover (remove perspec
     border-radius: 0.375rem;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     align-items: center;
     padding: 10%;
 }
@@ -185,11 +186,16 @@ to demonstrate that the flip itself goes out of the box on hover (remove perspec
     font-size: 1.5rem;
     color: #8685EF;
     font-weight: 400;
+    margin-bottom: 15px;
 }
 
 /* Movie description at the back of my card */
 #overview {
     font-size: 0.9rem;
+    width: 40char;
+    overflow: hidden;
+    white-space: no-wrap;
+    text-overflow: ellipsis;
 }
 
 /* Container for my category section */
@@ -235,7 +241,7 @@ to demonstrate that the flip itself goes out of the box on hover (remove perspec
 
 /* When the card is on hover */
 .card:hover {
-    background-image: linear-gradient(to right, #25242a, #3d3a56, #555286, #6e6bb9, #8685ef);
+    background-color: #212529;
     height: 93%;
     width: 93%;
 }
@@ -351,6 +357,7 @@ to demonstrate that the flip itself goes out of the box on hover (remove perspec
 .go-top-btn:hover {
     background-color: #25242a;
     color: #fff;
+    border: 2px solid #8685EF;
 }
 
 .go-top-btn:hover i{
